finished photo page, need to do about page next

--- a/photos.html
+++ b/photos.html
@@ -1,48 +1,119 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
     <link rel='stylesheet' href='main.css'>
 
     <title>Hello, world!</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link active" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="photos.html">Photos</a>
+            <a class="nav-link" href="photos.html">Photos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
         </li>
-      </ul>
+    </ul>
+
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AM5WKlR8-IcYXHNG2QfrWLtxVms/content/parts/@.id==2/thumbnail?appId=YMailNorrin" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Bunny</h5>
+                        <p class="card-text">Bunny is her name. Super cute and still a pup. 
+                            She has super blue eyes and enjoy eating rice and other types of human food.
+                            Her favorite activities include running in circles, running on top of the couch,
+                            and running to fetch her favorite toys
+                        </p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AF3AQlNyOC10XHNHiAKvgOOb41w/content/parts/@.id==2/thumbnail?appId=YMailNorrin" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Cinnamon</h5>
+                        <p class="card-text">This cute kitty is name Cinnamon, but I just call her kitty cat.
+                            She loves tuna from the can and loooovvveeees being pet. She's one of the 
+                            nicest cats I've ever seen. 
+                        </p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w-100"></div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==ALDQjkYO1_0JXHNH4Qvi-DgXn20/content/parts/@.id==2/thumbnail?appId=YMailNorrin" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Casper</h5>
+                        <p class="card-text">Casper is his name.  He was my dog when I lived in Knoxville. 
+                            He currently lives with my previous roommate in Kingston TN. He wasn't very nice
+                            to strangers, but deep down he was a loving dog who loved the cuddles. 
+                            </p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AGA6iOhIUachXHNIFAJN2AjAKRg/content/parts/@.id==2/thumbnail?appId=YMailNorrin" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Random dog friend</h5>
+                        <p class="card-text">I can't remember who's dog this was and I don't remember his 
+                            name either. He's super cute and I believe deserves to be on this page of super 
+                            cute animals!
+                            </p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
 
 
 
-
-
-      <footer>
+    <footer>
         Alex Thacker <br>
         thacker.alex@yahoo.com <br>
         Alex's photo page
-      </footer>
-      
+    </footer>
+
 
 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
