--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        
         <!-- INDEX.html is also the home page -->
         
-        <a class="nav-link active" href="index.html">Home</a>
+        <a class="nav-link active" href="">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="photos.html">Photos</a>
