--- a/about.html
+++ b/about.html
@@ -1,39 +1,73 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
     <link rel='stylesheet' href='main.css'>
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
+    <title>About</title>
+</head>
+
+<body>
     <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link active" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="photos.html">Photos</a>
+            <a class="nav-link" href="photos.html">Photos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
         </li>
-      </ul>
+    </ul>
+    <h2>
+        Bio
+    </h2>
+    <p>
+        Hi, my name is Alex Thacker. I was born Tennessee and raised in a small town called Pleasant View,
+        about thirty minutes north of Nashville. I went to Sycamore high school and graduated in 2009. After
+        high school I went to the University of Tennessee in Knoxville and graduated in 2014 with a bachelor
+        degree in supply chain management. After school I decided to stay in Knoxville until I moved back to
+        Pleasant View in mid 2017. <br><br>
+        I enjoy playing video games, some of my favorite games include the dark souls series, legend of zelda,
+        the elder scroll series, and god of war. Like most people I like tv as well. Some of my favorite shows
+        include the office, community, and american dad.
+    </p>
+
+    <img src='https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AJlhAGg1_cyjXHNM8wtC0M6Vj14/content/parts/@.id==2/thumbnail?appId=YMailNorrin'>
+
+   
+   <h4>
+       If you would like to contant me, just fill out the form below :)
+   </h4>
+   
+   
+    <form>
+        <div class="form-group">
+            <label for="formGroupExampleInput">Email</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Email">
+        </div>
+        <div class="form-group">
+            <label for="formGroupExampleInput2">Phone number</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="###-###-####">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
 
 
 
-
-
-      <footer>
+    <footer>
         Alex Thacker <br>
         thacker.alex@yahoo.com <br>
         Alex's photo page
-      </footer>
-      
+    </footer>
+
 
 
 
@@ -44,8 +78,12 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
