--- a/photos.html
+++ b/photos.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link rel='stylesheet' href='main.css'>
 
-    <title>Hello, world!</title>
+    <title>Photos</title>
 </head>
 
 <body>
@@ -33,10 +33,11 @@
         <div class="row">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AM5WKlR8-IcYXHNG2QfrWLtxVms/content/parts/@.id==2/thumbnail?appId=YMailNorrin" class="card-img-top" alt="...">
+                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AM5WKlR8-IcYXHNG2QfrWLtxVms/content/parts/@.id==2/thumbnail?appId=YMailNorrin"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Bunny</h5>
-                        <p class="card-text">Bunny is her name. Super cute and still a pup. 
+                        <p class="card-text">Bunny is her name. Super cute and still a pup.
                             She has super blue eyes and enjoy eating rice and other types of human food.
                             Her favorite activities include running in circles, running on top of the couch,
                             and running to fetch her favorite toys
@@ -48,12 +49,13 @@
 
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AF3AQlNyOC10XHNHiAKvgOOb41w/content/parts/@.id==2/thumbnail?appId=YMailNorrin" class="card-img-top" alt="...">
+                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AF3AQlNyOC10XHNHiAKvgOOb41w/content/parts/@.id==2/thumbnail?appId=YMailNorrin"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Cinnamon</h5>
                         <p class="card-text">This cute kitty is name Cinnamon, but I just call her kitty cat.
-                            She loves tuna from the can and loooovvveeees being pet. She's one of the 
-                            nicest cats I've ever seen. 
+                            She loves tuna from the can and loooovvveeees being pet. She's one of the
+                            nicest cats I've ever seen.
                         </p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
@@ -64,13 +66,14 @@
 
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==ALDQjkYO1_0JXHNH4Qvi-DgXn20/content/parts/@.id==2/thumbnail?appId=YMailNorrin" class="card-img-top" alt="...">
+                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==ALDQjkYO1_0JXHNH4Qvi-DgXn20/content/parts/@.id==2/thumbnail?appId=YMailNorrin"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Casper</h5>
-                        <p class="card-text">Casper is his name.  He was my dog when I lived in Knoxville. 
+                        <p class="card-text">Casper is his name. He was my dog when I lived in Knoxville.
                             He currently lives with my previous roommate in Kingston TN. He wasn't very nice
-                            to strangers, but deep down he was a loving dog who loved the cuddles. 
-                            </p>
+                            to strangers, but deep down he was a loving dog who loved the cuddles.
+                        </p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
@@ -78,13 +81,14 @@
 
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AGA6iOhIUachXHNIFAJN2AjAKRg/content/parts/@.id==2/thumbnail?appId=YMailNorrin" class="card-img-top" alt="...">
+                    <img src="https://apis.mail.yahoo.com/ws/v3/mailboxes/@.id==VjN-tic3--UTdMkUev1g3oBsMXqBN2CU-Kd5c0vkxfT0qrEgxeiY80WsNpLFTJc3mRA74QS589m2ULn4HOf3kMCF_g/messages/@.id==AGA6iOhIUachXHNIFAJN2AjAKRg/content/parts/@.id==2/thumbnail?appId=YMailNorrin"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Random dog friend</h5>
-                        <p class="card-text">I can't remember who's dog this was and I don't remember his 
-                            name either. He's super cute and I believe deserves to be on this page of super 
+                        <p class="card-text">I can't remember who's dog this was and I don't remember his
+                            name either. He's super cute and I believe deserves to be on this page of super
                             cute animals!
-                            </p>
+                        </p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
