added some small changes

--- a/about.html
+++ b/about.html
@@ -55,21 +55,28 @@
         </div>
         <div class="form-group">
             <label for="formGroupExampleInput2">Phone number</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="###-###-####">
+            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="###-###-####"><br>
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </form>
 
 
 
-    <footer>
-        Alex Thacker <br>
-        thacker.alex@yahoo.com <br>
-        Alex's photo page
-    </footer>
-
-
-
+    <div class="card text-center">
+        <div class="card-header">
+          
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Contact information</h5>
+          <p class="card-text">Alex Thacker <br>
+            thacker.alex@yahoo.com <br>
+            Alex's photo page</p>
+          <a href="https://www.linkedin.com/in/alex-thacker-48526349" class="btn btn-primary">Linkedin profile</a>
+        </div>
+        <div class="card-footer text-muted">
+          
+        </div>
+      </div>
 
 
 
