--- a/index.html
+++ b/index.html
@@ -29,9 +29,21 @@
       <a class="nav-link" href="about.html">About</a>
     </li>
   </ul>
-  <h1>
+ 
+  <div class="jumbotron">
+    <h1 class="display-4">Welcome to Alex's Photo Page!</h1>
+    <p class="lead"></p>
+    <hr class="my-4">
+    <p>This simple site uses basic html, css, and bootstrap layouts</p>
+    <a class="btn btn-primary btn-lg" href="https://getbootstrap.com/" role="button">Learn more about bootstrap</a>
+  </div>
+
+
+
+
+  <!-- <h1>
     Welcome to Alex's (insert creative title here) web page!
-  </h1>
+  </h1> -->
 
 
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -79,13 +91,21 @@
 
 
 
-  <footer>
-    Alex Thacker <br>
-    thacker.alex@yahoo.com <br>
-    Alex's photo page
-  </footer>
-
-
+  <div class="card text-center">
+    <div class="card-header">
+      
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Contact information</h5>
+      <p class="card-text">Alex Thacker <br>
+        thacker.alex@yahoo.com <br>
+        Alex's photo page</p>
+      <a href="https://www.linkedin.com/in/alex-thacker-48526349" class="btn btn-primary">Linkedin profile</a>
+    </div>
+    <div class="card-footer text-muted">
+      
+    </div>
+  </div>
 
 
 
