--- a/photos.html
+++ b/photos.html
@@ -101,12 +101,21 @@
 
 
 
-    <footer>
-        Alex Thacker <br>
-        thacker.alex@yahoo.com <br>
-        Alex's photo page
-    </footer>
-
+    <div class="card text-center">
+        <div class="card-header">
+          
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Contact information</h5>
+          <p class="card-text">Alex Thacker <br>
+            thacker.alex@yahoo.com <br>
+            Alex's photo page</p>
+          <a href="https://www.linkedin.com/in/alex-thacker-48526349" class="btn btn-primary">Linkedin profile</a>
+        </div>
+        <div class="card-footer text-muted">
+          
+        </div>
+      </div>
 
 
 
